Desafio 2 JS en practica

--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -36,6 +36,47 @@
 </div>
     <script>
     // Escríbe aquí tu código
+    let btn1 = document.getElementById("btn-1");
+    let btn2 = document.getElementById("btn-2");
+    let btn3 = document.getElementById("btn-3");
+    let btn4 = document.getElementById("btn-4");
+    let btn5 = document.getElementById("btn-5");
+    let btn6 = document.getElementById("btn-6");
+    //let caja = document.getElementById("caja");
+
+    btn1.addEventListener("click", function(e){
+        const colorFondo = this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style", `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+    btn2.addEventListener("click", function(e){
+        const colorFondo = this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style",  `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+    btn3.addEventListener("click", function(e){
+        const colorFondo = this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style",  `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+    btn4.addEventListener("click", function(e){
+        const colorFondo =this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style",  `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+
+    btn5.addEventListener("click", function(e){
+        const colorFondo = this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style",  `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+
+    btn6.addEventListener("click", function(e){
+        const colorFondo = this.style.backgroundColor;
+        document.getElementById("caja").setAttribute("style",  `color:${colorFondo}; background-color:${colorFondo};width: 100%;height: 100%`);
+    });
+
+
     </script>
 </body>
 
