--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -48,6 +48,75 @@
     </div>
     <script>
     // Escríbe aquí tu código
+    
+
+    //Funcion que valida solo el ingreso de letras minusculas y mayusculas.
+    const validarFormato = (valor) =>{   
+        let patron =  new RegExp('^[z-zA-Z ]+$', 'i');
+
+        if(patron.test(valor)){
+            return true;
+        }else{
+            return false;
+        }
+    };
+    /*-------------------------------------------------------*/
+    //Funcion para limpiar el formulario.
+    const limpiarFormulario = (valor) =>{   
+        //Limpiar mensajes anteriores de error.
+        document.querySelector(".errorNombre").innerHTML="";
+        document.querySelector(".errorAsunto").innerHTML="";
+        document.querySelector(".errorMensaje").innerHTML="";
+        document.querySelector(".resultado").innerHTML="";
+    };
+    /*-------------------------------------------------------*/
+
+    let botton = document.getElementById("botton");
+
+    botton.addEventListener("click", function(e){
+        e.preventDefault();
+
+        limpiarFormulario();
+
+        let nombre = document.getElementById("nombre").value;
+        let asunto = document.getElementById("asunto").value;
+        let mensaje = document.getElementById("mensaje").value; 
+        let resultado = true;
+
+        if(nombre.length == 0){
+            document.querySelector(".errorNombre").innerHTML="El nombre es requerido.";
+            resultado = false;
+        }else{
+            if(!validarFormato(nombre)){
+                document.querySelector(".errorNombre").innerHTML="El formato no es permitido solo [az-A-Z].";
+                resultado = false;
+            }
+        }
+
+        if(asunto.length == 0){
+            document.querySelector(".errorAsunto").innerHTML="El asunto es requerido.";
+            resultado = false;
+        }else{
+            if(!validarFormato(asunto)){
+                document.querySelector(".errorAsunto").innerHTML="El formato no es permitido solo [az-A-Z].";
+                resultado = false;
+            }
+        }
+
+        if(mensaje.length == 0){
+            resultado = false;
+            document.querySelector(".errorMensaje").innerHTML="El mensaje es requerido.";
+        }else{
+            if(!validarFormato(mensaje)){
+                document.querySelector(".errorMensaje").innerHTML="El formato no es permitido solo [az-A-Z].";
+                resultado = false;
+            }
+        }
+
+        if(resultado)
+            document.querySelector(".resultado").innerHTML="Mensaje enviado con éxito !!!";
+    });
+
     </script>
 </body>
 
